objects/ssot__EngagementAnalysisTextDirectFeedback__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextId__c</fullName>
        <label>Engagement Analysis Text Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelSourceType__c</fullName>
        <label>Engagement Channel Source Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Analysis Text Direct Fdbk Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TextAnalysisFeedbackType__c</fullName>
        <label>Text Analysis Feedback Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TextAnalysisFeedbackValue__c</fullName>
        <label>Text Analysis Feedback Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546704058_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementAnalysisTextDirectFeedback_rel</label>
        <referenceTo>ssot__EngagementAnalysisText__dlm</referenceTo>
        <relationshipLabel>EngagementAnalysisTextDirectFeedback_rel</relationshipLabel>
        <relationshipName>rel_1718546704058_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>